WIP adding some Material Design elements"

--- a/src/components/styles.styl
+++ b/src/components/styles.styl
@@ -1,8 +1,23 @@
 @import 'yeticss'
 
+h2 {
+  margin-left: 20px
+}
+
+nav {
+  padding: 10px;
+  background: lightblue
+}
 nav a {
   margin: 5px
 }
 nav a.active {
   background: black
+}
+
+
+table.summary {
+  background: lightgray;
+  width: 80%;
+  margin-left: 20px;
 }
